checker/tests/parsing/errors/when_missing_bound.mft
type T {
  when impl C;
}
=== error ===
Unrecognized token `impl` found at 16:20
Expected one of "field reference", "identifier", "string literal" or "variable"